Use ansible playbook to initialize openshift cluster
* Added playbooks/gce/openshift-cluster
* Added bin/cluster (will replace cluster.sh)

--- a/playbooks/gce/openshift-node/config.yml
+++ b/playbooks/gce/openshift-node/config.yml
@@ -53,6 +53,7 @@
   roles:
   - openshift_register_nodes
   tasks:
+  tasks:
   - name: Create local temp directory for syncing certs
     local_action: command /usr/bin/mktemp -d /tmp/openshift-ansible-XXXXXXX
     register: mktemp
