--- a/playbooks/gce/openshift-node/config.yml
+++ b/playbooks/gce/openshift-node/config.yml
@@ -1,5 +1,4 @@
----
-- name: "populate oo_hosts_to_config host group if needed"
+- name: "node/config.yml, populate oo_hosts_to_config host group if needed"
   hosts: localhost
   gather_facts: no
   tasks:
@@ -12,6 +11,11 @@
   hosts: "tag_env-host-type-{{ oo_env }}-openshift-master"
   connection: ssh
   user: root
+  gather_facts: yes
+  tasks:
+    - command: 'curl "http://metadata.google.internal/computeMetadata/v1/instance/network-interfaces/0/access-configs/0/external-ip" -H "Metadata-Flavor: Google"'
+      register: output
+    - set_fact: gce_public_ip="{{ output.stdout }}"
 
 - name: "Set OO sepcific facts on localhost (for later use)"
   hosts: localhost
@@ -36,6 +40,10 @@
   user: root
   vars_files:
     - vars.yml
+
+  tasks:
+    - debug: var=gce_public_ip
+
   roles:
     - {
         role: openshift_node,
