Allow for overriding node resources
- add variable openshift_node_resources to openshift_node role
- set default value for openshift_node_resources to
  { capacity: { cpu: ,memory: }}
- If cpu is not set, then the default value will be chosen by the
  openshift_register_node module (num logical cpus)
- If memory is not set, then the default value will be chosen by the
  openshift_register_node module (75% MemTotal according to /proc/meminfo)

--- a/roles/openshift_node/tasks/main.yml
+++ b/roles/openshift_node/tasks/main.yml
@@ -72,8 +72,7 @@
   args:
     creates: /root/.kube/.kubeconfig
 
-# TODO: expose openshift_register_node options to allow for overriding the
-# defaults.
 - name: Register node (if not already registered)
   openshift_register_node:
     name: "{{ openshift_hostname }}"
+    resources: "{{ openshift_node_resources }}"
