--- a/playbooks/gce/openshift-cluster/launch.yml
+++ b/playbooks/gce/openshift-cluster/launch.yml
@@ -3,21 +3,19 @@
   hosts: localhost
   connection: local
   gather_facts: no
-
   vars_files:
       - vars.yml
-
   tasks:
     - set_fact: k8s_type="master"
 
-    - name: "Generate master instance names(s)"
-      set_fact: scratch="{{ cluster_id }}-{{ k8s_type }}-{{ '%05x' |format( 1048576 |random) }}"
+    - name: Generate master instance names(s)
+      set_fact: scratch={{ cluster_id }}-{{ k8s_type }}-{{ '%05x' |format( 1048576 |random) }}
       register: instance_names_output
       with_sequence: start=1 end={{ masters }}
 
     # These set_fact's cannot be combined
     - set_fact:
-        instance_names_string: "{% for item in instance_names_output.results %}{{item.ansible_facts.scratch}} {% endfor %}"
+        instance_names_string: "{% for item in instance_names_output.results %}{{ item.ansible_facts.scratch }} {% endfor %}"
 
     - set_fact:
         master_names: "{{ instance_names_string.strip().split(' ') }}"
@@ -31,14 +29,14 @@
 
     - set_fact: k8s_type="node"
 
-    - name: "Generate node instance names(s)"
-      set_fact: scratch="{{ cluster_id }}-{{ k8s_type }}-{{ '%05x' |format( 1048576 |random) }}"
+    - name: Generate node instance names(s)
+      set_fact: scratch={{ cluster_id }}-{{ k8s_type }}-{{ '%05x' |format( 1048576 |random) }}
       register: instance_names_output
       with_sequence: start=1 end={{ nodes }}
 
     # These set_fact's cannot be combined
     - set_fact:
-        instance_names_string: "{% for item in instance_names_output.results %}{{item.ansible_facts.scratch}} {% endfor %}"
+        instance_names_string: "{% for item in instance_names_output.results %}{{ item.ansible_facts.scratch }} {% endfor %}"
 
     - set_fact:
         node_names: "{{ instance_names_string.strip().split(' ') }}"
@@ -48,15 +46,17 @@
         instances: "{{ node_names }}"
         cluster: "{{ cluster_id }}"
         type: "{{ k8s_type }}"
-        group_name: "tag_env-host-type-{{ cluster_id }}-openshift-node"
 
+- hosts: "tag_env-{{ cluster_id }}"
+  roles:
+  - os_update_latest
 
 - include: ../openshift-master/config.yml
   vars:
-    oo_host_group_exp: "{{ master_names }}"
+    oo_host_group_exp: "groups[\"tag_env-host-type-{{ cluster_id }}-openshift-master\"]"
     oo_env: "{{ cluster_id }}"
 
 - include: ../openshift-node/config.yml
   vars:
-    oo_host_group_exp: "{{ node_names }}"
+    oo_host_group_exp: "groups[\"tag_env-host-type-{{ cluster_id }}-openshift-node\"]"
     oo_env: "{{ cluster_id }}"
