--- a/playbooks/gce/openshift-cluster/launch_instances.yml
+++ b/playbooks/gce/openshift-cluster/launch_instances.yml
@@ -19,14 +19,16 @@
   register: gce
 
 - name: Add new instances public IPs
-  add_host: "hostname={{ item.name }} ansible_ssh_host={{ item.public_ip }} groups={{ group_name }}"
+  add_host:
+    hostname: "{{ item.name }}"
+    ansible_ssh_host: "{{ item.public_ip }}"
+    groups: "{{ item.tags | oo_prepend_strings_in_list('tag_') | join(',') }}"
+    gce_public_ip: "{{ item.public_ip }}"
   with_items: gce.instance_data
 
 - name: Wait for ssh
   wait_for: "port=22 host={{ item.public_ip }}"
   with_items: gce.instance_data
-
-- debug: var=gce
 
 - name: Wait for root user setup
   command: "ssh -o StrictHostKeyChecking=no -o PasswordAuthentication=no -o ConnectTimeout=10 -o UserKnownHostsFile=/dev/null root@{{ item.public_ip }} echo root user is setup"
