Register node fixes
- Set --hostname flag in node config in openshift_node role
- Support some additional node attributes in openshift_node role
  - podCIDR
  - labels
  - annotations
- Support both output types for openshift ex config view in
  openshift_register_node module
- Support multiple api versions in openshift_register_node module
- Support additional attributes in openshift_register_node module
  - annotations
  - labels
  - pod_cidr
  - external_ips (v1beta3, will be available after next kube rebase)
  - internal_ips (v1beta3, will be available after next kube rebase)
  - hostnames (v1beta3, will be available after next kube rebase)
  - external_id (v1beta3, will be available after next kube rebase)

--- a/roles/openshift_node/defaults/main.yml
+++ b/roles/openshift_node/defaults/main.yml
@@ -5,6 +5,8 @@ os_firewall_allow:
 - service: OpenShift kubelet
   port: 10250/tcp
 openshift_node_resources:
-  capacity:
-    cpu:
-    memory:
+  cpu:
+  memory:
+  cidr:
+openshift_node_labels: {}
+openshift_node_annotations: {}
