Rename repos role to openshift_repos
- Rename repos role to openshift_repos
  - Make openshift_repos a dependency of openshift_common
  - Add README and metadata for openshift_repos
  - Playbook updates for role rename
- Verify libselinux-python is installed, otherwise some of the bulit-in
  modules we use fail

--- a/playbooks/gce/openshift-master/config.yml
+++ b/playbooks/gce/openshift-master/config.yml
@@ -7,7 +7,7 @@
     with_items: "{{ oo_host_group_exp | default('') }}"
     when: oo_host_group_exp is defined
 
-- name: "Gather facts for nodes in {{ oo_env }}"
+- name: Gather facts for nodes in {{ oo_env }}
   hosts: "tag_env-host-type-{{ oo_env }}-openshift-node"
 
 - name: "Configure instances"
