Rename repos role to openshift_repos
- Rename repos role to openshift_repos
  - Make openshift_repos a dependency of openshift_common
  - Add README and metadata for openshift_repos
  - Playbook updates for role rename
- Verify libselinux-python is installed, otherwise some of the bulit-in
  modules we use fail

--- a/roles/openshift_repos/tasks/main.yaml
+++ b/roles/openshift_repos/tasks/main.yaml
@@ -8,6 +8,11 @@
 - fail: msg="OpenShift Origin support is not currently enabled"
   when: openshift_deployment_type == 'origin'
 
+- name: Ensure libselinux-python is installed
+  yum:
+    pkg: libselinux-python
+    state: present
+
 - name: Create any additional repos that are defined
   template:
     src: yum_repo.j2
