Add new role os_env_extras_node that is a subset of the docker role
- Does not install or start docker, since the openshift-node role will handle
  that for us
- Only add root to the dockerroot group and configures the enter-container
  script.

--- a/playbooks/aws/openshift-node/config.yml
+++ b/playbooks/aws/openshift-node/config.yml
@@ -44,5 +44,5 @@
         openshift_env: "{{ oo_env }}",
         openshift_public_ip: "{{ ec2_ip_address }}"
       }
-    - docker
     - os_env_extras
+    - os_env_extras_node
