--- a/roles/os_firewall/tasks/firewall/firewalld.yml
+++ b/roles/os_firewall/tasks/firewall/firewalld.yml
@@ -3,6 +3,7 @@
   yum:
     name: firewalld
     state: present
+  register: install_result
 
 - name: Check if iptables-services is installed
   command: rpm -q iptables-services
@@ -19,6 +20,10 @@
   - iptables
   - ip6tables
   when: pkg_check.rc == 0
+
+- name: Reload systemd units
+  command: systemctl daemon-reload
+  when: install_result | changed
 
 - name: Start and enable firewalld service
   service:
