* repos role renamed to openshift_repos

--- a/playbooks/gce/openshift-cluster/launch.yml
+++ b/playbooks/gce/openshift-cluster/launch.yml
@@ -49,7 +49,7 @@
 
 - hosts: "tag_env-{{ cluster_id }}"
   roles:
-  - repos
+  - openshift_repos
   - os_update_latest
 
 - include: ../openshift-master/config.yml
