--- a/roles/openshift_register_nodes/tasks/main.yml
+++ b/roles/openshift_register_nodes/tasks/main.yml
@@ -39,7 +39,8 @@
 
 - name: Register unregistered nodes
   kubernetes_register_node:
-    kubectl_cmd: ['openshift', 'kube']
+    kubectl_cmd: ['osc']
+    default_client_config: '~/.config/openshift/.config'
     name: "{{ item.openshift.common.hostname }}"
     api_version: "{{ openshift_kube_api_version }}"
     cpu: "{{ item.openshift.node.resources_cpu | default(None) }}"
