fixes to better deal with gce image defaults
- remove exception if INPUT rules are not found, gce centos-7 image is stripped of
  default rules
- ignore_errors for systemctl mask operation, fails with permission denied on
  gce centos-7 image.

--- a/roles/os_firewall/tasks/firewall/firewalld.yml
+++ b/roles/os_firewall/tasks/firewall/firewalld.yml
@@ -44,6 +44,7 @@
   - iptables
   - ip6tables
   when: pkg_check.rc == 0
+  ignore_errors: yes
 
 # TODO: Ansible 1.9 will eliminate the need for separate firewalld tasks for
 # enabling rules and making them permanent with the immediate flag
